refactor フォルダ構造 asmdef変更

--- a/Assets/HistoryViewer/Tests/Tests.asmdef
+++ b/Assets/HistoryViewer/Tests/Tests.asmdef
@@ -2,9 +2,9 @@
     "name": "Tests",
     "rootNamespace": "",
     "references": [
-        "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "GitHistory"
+        "HistoryViewerModel",
+        "HistoryViewerInterface"
     ],
     "includePlatforms": [
         "Editor"
