--- a/Assets/HistoryViewer/Scripts/middleware/HistoryViewerMiddleware.asmdef
+++ b/Assets/HistoryViewer/Scripts/middleware/HistoryViewerMiddleware.asmdef
@@ -1,12 +1,10 @@
 {
-    "name": "Scripts",
+    "name": "HistoryViewerMiddleware",
     "rootNamespace": "",
     "references": [
-        "GitHistory"
+        "GUID:b7c90106e220c4a7abd31d53231e3469"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
