--- a/Assets/HistoryViewer/Scripts/middleware/Utils/HistoryViewMiddlewareUtils.asmdef
+++ b/Assets/HistoryViewer/Scripts/middleware/Utils/HistoryViewMiddlewareUtils.asmdef
@@ -1,11 +1,10 @@
 {
-    "name": "HistoryViewerMiddleware",
+    "name": "HistoryViewMiddlewareUtils",
     "rootNamespace": "",
-    "references": [
-        "GUID:b7c90106e220c4a7abd31d53231e3469",
-        "GUID:ff5e8471a64764b9b8d3030a4c029173"
+    "references": [],
+    "includePlatforms": [
+        "Editor"
     ],
-    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
