--- a/Assets/HistoryViewer/Scripts/models/Utils/Utils.asmdef
+++ b/Assets/HistoryViewer/Scripts/models/Utils/Utils.asmdef
@@ -1,10 +1,7 @@
 {
-    "name": "HistoryViewerModel",
+    "name": "Utils",
     "rootNamespace": "",
-    "references": [
-        "GUID:b7c90106e220c4a7abd31d53231e3469",
-        "GUID:7510bfbbe816b47908a401799e324039"
-    ],
+    "references": [],
     "includePlatforms": [
         "Editor"
     ],
