--- a/Assets/HistoryViewer/Tests/Tests.asmdef
+++ b/Assets/HistoryViewer/Tests/Tests.asmdef
@@ -2,7 +2,6 @@
     "name": "Tests",
     "rootNamespace": "",
     "references": [
-        "UnityEditor.TestRunner",
         "HistoryViewerModel",
         "HistoryViewerInterface"
     ],
@@ -20,5 +19,5 @@
         "UNITY_INCLUDE_TESTS"
     ],
     "versionDefines": [],
-    "noEngineReferences": false
+    "noEngineReferences": true
 }
