--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,7 +40,7 @@
         "**/*.flare":true,
         "**/*.mat":true,
         "**/*.meta":true,
-        "**/*.prefab":true,
+        "**/*.prefab":false,
         "**/*.unity":false,
         "build/":true,
         "Build/":true,
