rename Assembly Name

--- a/Assets/HistoryViewer/Scripts/Editors/HistoryViewerEditor.asmdef
+++ b/Assets/HistoryViewer/Scripts/Editors/HistoryViewerEditor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "HistoryViewerEditor",
+    "name": "negi0109.HistoryViewer.HistoryViewerEditor",
     "rootNamespace": "",
     "references": [
         "GUID:b7c90106e220c4a7abd31d53231e3469",
