--- a/Assets/HistoryViewer/Scripts/Interfaces/HistoryViewerInterface.asmdef
+++ b/Assets/HistoryViewer/Scripts/Interfaces/HistoryViewerInterface.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "HistoryViewerInterface",
+    "name": "negi0109.HistoryViewer.HistoryViewerInterface",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [
