--- a/Assets/HistoryViewer/Scripts/middleware/Utils/HistoryViewMiddlewareUtils.asmdef
+++ b/Assets/HistoryViewer/Scripts/middleware/Utils/HistoryViewMiddlewareUtils.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "HistoryViewMiddlewareUtils",
+    "name": "negi0109.HistoryViewer.HistoryViewMiddlewareUtils",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [
