--- a/Assets/HistoryViewer/Tests/Tests.asmdef
+++ b/Assets/HistoryViewer/Tests/Tests.asmdef
@@ -1,9 +1,9 @@
 {
-    "name": "Tests",
+    "name": "negi0109.HistoryViewer.Tests",
     "rootNamespace": "",
     "references": [
-        "HistoryViewerModel",
-        "HistoryViewerInterface"
+        "negi0109.HistoryViewer.HistoryViewerModel",
+        "negi0109.HistoryViewer.HistoryViewerInterface"
     ],
     "includePlatforms": [
         "Editor"
