--- a/Assets/HistoryViewer/Scripts/middleware/HistoryViewerMiddleware.asmdef
+++ b/Assets/HistoryViewer/Scripts/middleware/HistoryViewerMiddleware.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "HistoryViewerMiddleware",
+    "name": "negi0109.HistoryViewer.HistoryViewerMiddleware",
     "rootNamespace": "",
     "references": [
         "GUID:b7c90106e220c4a7abd31d53231e3469",
