--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,12 +50,12 @@ jobs:
           TAG: release-${{ fromJson(steps.package.outputs.data).version }}
 
       - name: Create Release
-        uses: actions/create-release@v1
+        uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: release-${{ fromJson(steps.package.outputs.data).version }}
-          release_name: v${{ fromJson(steps.package.outputs.data).version }}
+          name: v${{ fromJson(steps.package.outputs.data).version }}
           body: https://github.com/negi0109/unity-history-viewer.git#release-${{ fromJson(steps.package.outputs.data).version }}
           draft: false
           prerelease: false
