--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,10 @@ name: release
 
 on:
   workflow_dispatch:
+    inputs:
+      version:
+        description: "version (sample 1.0.0)"
+        required: true
 
 jobs:
   release:
@@ -24,12 +28,21 @@ jobs:
           TAG: release-${{ fromJson(steps.package.outputs.data).version }}
 
       - name: Exit if already exisists.
-        if: steps.check_tag.outcome == 'success'
+        if: fromJson(steps.package.outputs.data).version == inputs.version
         run: |
           echo "::notice:: Tag ${{ env.TAG }} is already exists."
           exit 1
         env:
           TAG: release-${{ fromJson(steps.package.outputs.data).version }}
+
+      - name: set version & git commit
+        run: |
+          sed -i -e "s/\(\"version\":\) \"\(.*\)\",/\1 \"${{ inputs.version }}\",/" ${{ env.ROOT }}/package.json
+          git add .
+          git config --global user.name 'github-bot'
+          git config --global user.email 'github-bot@users.noreply.github.com'
+          git commit -m "update version ${{ inputs.version }}"
+          git push origin main
 
       - name: get git commit
         id: commit
@@ -51,7 +64,7 @@ jobs:
           git checkout release
           git config --global user.name 'github-bot'
           git config --global user.email 'github-bot@users.noreply.github.com'
-          git commit -am "release-${{ fromJson(steps.package.outputs.data).version }}" -m "${{ steps.commit.outputs.data }}"
+          git commit -am "release-${{ inputs.version }}" -m "${{ steps.commit.outputs.data }}"
           git status
           git push origin release
 
@@ -60,15 +73,15 @@ jobs:
           git tag -f ${{ env.TAG }}
           git push -f origin ${{ env.TAG }}
         env:
-          TAG: release-${{ fromJson(steps.package.outputs.data).version }}
+          TAG: release-${{ inputs.version }}
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: release-${{ fromJson(steps.package.outputs.data).version }}
-          name: v${{ fromJson(steps.package.outputs.data).version }}
-          body: https://github.com/negi0109/unity-history-viewer.git#release-${{ fromJson(steps.package.outputs.data).version }}
+          tag_name: release-${{ inputs.version }}
+          name: v${{ inputs.version }}
+          body: https://github.com/negi0109/unity-history-viewer.git#release-${{ inputs.version }}
           draft: false
           prerelease: false
